fanli 0.0.6-SNAPSHOT Daily commit! by Deng Haozhi