@@ -1,15 +1,14 @@
 package org.endless.fanli.component.game.eve.infrastructure.driven.adapter.esi;
 
-import java.util.Arrays;
-import java.util.Map;
-import java.util.Objects;
-
+import lombok.NonNull;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpHeaders;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
 
-import lombok.NonNull;
-import lombok.extern.slf4j.Slf4j;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.Objects;
 
 /**
  * AbstractEsiRemoteAdapter
@@ -30,6 +29,8 @@ public abstract class AbstractEsiRemoteAdapter implements EsiRemoteAdapter {
 
     protected static final String ESI_LANGUAGE = "zh";
 
+    protected static final String ESI_Forge_REGION_ID = "10000002";
+
     protected static final String ESI_SSO_CACHE_URI = "https://login.evepc.163.com/account/logoff";
 
     protected static final String ESI_SSO_REDIRECT_URI = "https://esi.evepc.163.com/ui/oauth2-redirect.html";
@@ -43,12 +44,12 @@ public abstract class AbstractEsiRemoteAdapter implements EsiRemoteAdapter {
     protected static final String ESI_SSO_SCOPE = "esi-characters.read_corporation_roles.v1 esi-corporations.read_blueprints.v1 esi-industry.read_corporation_jobs.v1 esi-skills.read_skills.v1 esi-wallet.read_corporation_wallets.v1 esi-assets.read_corporation_assets.v1 esi-planets.manage_planets.v1";
 
     protected <T> T get(@NonNull RestClient restClient, @NonNull String uri,
-            @NonNull Class<T> bodyType) {
+                        @NonNull Class<T> bodyType) {
         return get(restClient, uri, bodyType, Object.class);
     }
 
     protected <T> T get(@NonNull RestClient restClient, @NonNull String uri,
-            @NonNull Class<T> bodyType, @NonNull Map<String, Object> uriVariables) {
+                        @NonNull Class<T> bodyType, @NonNull Map<String, Object> uriVariables) {
 
         try {
 
@@ -63,7 +64,7 @@ public abstract class AbstractEsiRemoteAdapter implements EsiRemoteAdapter {
     }
 
     protected <T> T get(@NonNull RestClient restClient, @NonNull String uri,
-            @NonNull Class<T> bodyType, Object... uriVariables) {
+                        @NonNull Class<T> bodyType, Object... uriVariables) {
 
         try {
 
@@ -82,7 +83,7 @@ public abstract class AbstractEsiRemoteAdapter implements EsiRemoteAdapter {
     }
 
     protected <T> HttpHeaders getHeader(@NonNull RestClient restClient, @NonNull String uri,
-            @NonNull Class<T> bodyType, @NonNull Map<String, Object> uriVariables) {
+                                        @NonNull Class<T> bodyType, @NonNull Map<String, Object> uriVariables) {
 
         try {
             return restClient.get().uri(uri, uriVariables).retrieve().toEntity(bodyType)
@@ -95,20 +96,18 @@ public abstract class AbstractEsiRemoteAdapter implements EsiRemoteAdapter {
         }
     }
 
-    public <T> Integer getPages(@NonNull RestClient restClient, @NonNull String uri,
-            @NonNull Class<T> bodyType, @NonNull Map<String, Object> uriVariables) {
+    public <T> Integer getPages(HttpHeaders headers) {
 
         try {
             return Integer.parseInt(Objects
-                    .requireNonNull(
-                            getHeader(restClient, uri, bodyType, uriVariables).get("X-Pages"))
-                    .get(0));
+                    .requireNonNull(headers.get("X-Pages"))
+                    .getFirst());
 
         } catch (Exception e) {
 
             log.error(e.getMessage());
             log.trace(Arrays.toString(e.getStackTrace()));
-            return Integer.valueOf(0);
+            return 0;
         }
     }
 
